# fraud-detection

./: README.md  pyproject.toml
.harness/: Build_bcorfman_fraud_detection_1721670231485-pr-trigger-input-set-1721670232936.yaml  Build_bcorfman_fraud_detection_1721670231485-push-trigger-input-set-1721670234359.yaml
.harness/pipelines/: fraud-detection-1721670215713.yaml
src/fraud_detection/: __init__.py
